data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3594.wast
;; 3. **Test Description**:    - **Constraint Checked**: Insufficient Arguments on Stack    - **CFG Relevance**: Checks the behavior when there are fewer arguments on the stack than required by the function call.    - **Expected Behavior**: Trap due to an arity mismatch error in Wizard Engine, indicating insufficient arguments for the function.

(assert_invalid
  (module
    (func $insufficient-args (call 1 (i32.const 1)))
    (func (param i32 i32))
  )
  "arity mismatch"
)